# pdfalto

./: .bumpversion.toml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dependencies_INSTALL.md  INSTALL  Makefile.linux.old  Makefile.linux64  Makefile.macos  Makefile.old  Readme.md  install_deps.sh  install_xpdf_language_packages.sh  make.bat  xpdfrc
.github/workflows/: ci-build-libs.yml  ci-build.yml  codeql.yml  valgrind.yml
RELAXSchemas/: annots.rnc  outline.rnc  pdftoxml.rng
RELAXSchemas.old/: pdftoxml-annot.rnc  pdftoxml.rnc  pdftoxml.xsd  xml.xsd
docs/: memory-benchmark-0.6.0-vs-0.6.1.md
image/: make.bat
image/png/: CMakeLists.txt
image/zlib/: CMakeLists.txt
languages/: xpdfrc
languages/xpdf-chinese-simplified/: Adobe-GB1.cidToUnicode  README
languages/xpdf-korean/: Adobe-KR.cidToUnicode  README
languages/xpdf-oldstyle/: oldstyle.nameToUnicode
languages/xpdf-other/: oldstyle.nameToUnicode
languages/xpdf-others/: ligatures.nameToUnicode  oldstyle.nameToUnicode  others.nameToUnicode  sc.nameToUnicode  symbols.unicodeRemapping  taboldstyle.nameToUnicode
libs/freetype/include/freetype/config/: ftconfig.h
libs/freetype/linux/64/lib/pkgconfig/: freetype2.pc
libs/freetype/linux/arm64/lib/pkgconfig/: freetype2.pc
libs/freetype/mac/64/lib/pkgconfig/: freetype2.pc
libs/freetype/mac/arm64/lib/pkgconfig/: freetype2.pc
libs/icu/common/: appendable.ao  appendable.d  bmpset.ao  bmpset.d  brkeng.ao  brkeng.d  brkiter.ao  brkiter.d  bytesinkutil.ao  bytesinkutil.d  bytestream.ao  bytestream.d  bytestrie.ao  bytestrie.d  bytestriebuilder.ao  bytestriebuilder.d  bytestrieiterator.ao  bytestrieiterator.d  caniter.ao  caniter.d  chariter.ao  chariter.d  charstr.ao  charstr.d  cmemory.ao  cmemory.d  cstr.ao  cstr.d  cstring.ao  cstring.d  cwchar.d  dictbe.ao  dictbe.d  dictionarydata.ao  dictionarydata.d  dtintrv.ao  dtintrv.d  edits.ao  edits.d  errorcode.ao  (+332 more)
libs/icu/linux/64/lib/icu/: Makefile.inc
libs/icu/linux/64/lib/icu/current/: pkgdata.inc
libs/icu/linux/64/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
libs/icu/linux/64/sbin/: escapesrc  genccode  gencmn  gennorm2  gensprep  icupkg
libs/icu/linux/64/share/man/man1/: gencnval.1  uconv.1
libs/icu/linux/arm64/lib/icu/: Makefile.inc  pkgdata.inc
libs/icu/linux/arm64/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
libs/icu/linux/arm64/sbin/: escapesrc  genccode  gencmn  gennorm2  gensprep  icupkg
libs/icu/linux/arm64/share/man/man1/: genbrk.1
libs/icu/linux/arm64/share/man/man8/: gensprep.8  icupkg.8
libs/icu/mac/64/lib/icu/76.1/: Makefile.inc
libs/icu/mac/64/lib/icu/current/: pkgdata.inc
libs/icu/mac/64/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
libs/icu/mac/64/sbin/: escapesrc  genccode  gencmn  gennorm2  gensprep  icupkg
libs/icu/mac/64/share/man/man1/: gencfu.1  gendict.1  icu-config.1  icuexportdata.1
libs/icu/mac/arm64/lib/icu/current/: Makefile.inc  pkgdata.inc
libs/icu/mac/arm64/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc
libs/icu/mac/arm64/sbin/: escapesrc  genccode  gencmn  gennorm2  gensprep  icupkg
libs/icu/mac/arm64/share/man/man1/: derb.1  genrb.1  makeconv.1  pkgdata.1
libs/icu/mac/arm64/share/man/man8/: genccode.8  gencmn.8
libs/image/png/include/: pnglibconf.h
libs/image/png/linux/64/lib/pkgconfig/: libpng16.pc
libs/image/png/linux/arm64/include/libpng16/: pnglibconf.h
libs/image/png/linux/arm64/lib/: libpng16.so.16.46.0
libs/image/png/linux/arm64/lib/pkgconfig/: libpng16.pc
libs/image/png/mac/64/lib/: libpng16.dylib
libs/image/png/mac/64/lib/pkgconfig/: libpng.pc
libs/image/png/mac/64/lib/png.framework/: png
libs/image/png/mac/arm64/lib/: libpng.dylib
libs/image/png/mac/arm64/lib/pkgconfig/: libpng.pc
libs/image/png/mac/arm64/lib/png.framework/: png
libs/image/png/mac/arm64/lib/png.framework/Versions/1.6.46/Headers/: pnglibconf.h
libs/image/png/src/: CMakeLists.txt  png.c  png_export.h
libs/image/zlib/: zutil.c
libs/image/zlib/linux/64/share/pkgconfig/: zlib.pc
libs/image/zlib/linux/arm64/lib/: libz.so.1
libs/image/zlib/linux/arm64/share/pkgconfig/: zlib.pc
libs/image/zlib/mac/64/lib/: libz.dylib
libs/image/zlib/mac/64/share/pkgconfig/: zlib.pc
libs/image/zlib/mac/arm64/lib/: libz.1.3.1.dylib
libs/image/zlib/mac/arm64/share/pkgconfig/: zlib.pc
libs/image/zlib/src/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.h
libs/libxml/include/: Makefile.in
libs/libxml/include/libxml/: xmlversion.h
libs/libxml/linux/64/lib/pkgconfig/: libxml-2.0.pc
libs/libxml/linux/64/python/: libxml2mod.so.2.13.6
libs/libxml/linux/arm64/include/libxml2/libxml/: xmlversion.h
libs/libxml/linux/arm64/lib/pkgconfig/: libxml-2.0.pc
libs/libxml/linux/arm64/python/: libxml2mod.so.2.13.6
libs/libxml/mac/64/include/libxml2/libxml/: xmlversion.h
libs/libxml/mac/64/lib/pkgconfig/: libxml-2.0.pc
libs/libxml/mac/64/python/: libxml2.py  libxml2mod.dylib
libs/libxml/mac/arm64/lib/pkgconfig/: libxml-2.0.pc
libs/libxml/mac/arm64/python/: libxml2mod.dylib
samples/pdfalto_dump/: 5da7122c-2ad4-4312-9394-94376dfdde06.xml  5da7122c-2ad4-4312-9394-94376dfdde06_annot.xml  5da7122c-2ad4-4312-9394-94376dfdde06_metadata.xml  5da7122c-2ad4-4312-9394-94376dfdde06_outline.xml
schema/: alto2txt-rl.xsl  alto2txt.xsl  readme.md
scripts/: alto2text.sh  compare_pdfalto.py  compare_revisions.py  pdfalto2text.sh  pdfalto2xml.sh
src/: AnnotsXrce.cc  AnnotsXrce.h  ConstantsUtils.cc  ConstantsUtils.h  ConstantsXML.cc  ConstantsXML.h  ConstantsXMLALTO.cc  ConstantsXMLALTO.h  DataGeneratorOutputDev.cc  DataGeneratorOutputDev.h  PDFDocXrce.cc  PDFDocXrce.h  Parameters.cc  Parameters.h  XmlAltoOutputDev.cc  XmlAltoOutputDev.h  pdf2xml_doc.Doxyfile  pdfalto.cc  traingenerator.cc
tests/: test_invariant_compare_pdfalto.py
xpdf-patches/: v4.02-Disable-fontconfig-and-make-Qt-optional.patch
xpdfrc/: advTT3f84ef53.unicodeToUnicode  wingdings.unicodeToUnicode  xpdfrc
(+1 files in other folders)
